--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,4 +1,5 @@
 @use "variables" as v;
+@use "base/mixins" as m;
 
 html {
   box-sizing: border-box;
@@ -64,10 +65,20 @@ input {
   max-width: 45rem;
   width: 95%;
   margin: 0 auto;
+
+  @include m.tablet {
+    max-width: 78rem;
+  }
 }
 
 .content-center {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.pd-tablet-15 {
+  @include m.tablet {
+    padding: 15rem 0;
+  }
 }
