--- a/scss/interface/_calc.scss
+++ b/scss/interface/_calc.scss
@@ -5,4 +5,8 @@
   background-color: v.$white;
   padding: 5rem 2.5rem;
   border-radius: 2.5rem 2.5rem 15rem 2.5rem;
+
+  @include m.tablet {
+    padding: 6rem;
+  }
 }
